@@ -64,6 +64,8 @@ import static com.openexchange.drive.DriveExceptionMessages.INVALID_FILEVERSION_
 import static com.openexchange.drive.DriveExceptionMessages.INVALID_FILE_OFFSET_MSG;
 import static com.openexchange.drive.DriveExceptionMessages.INVALID_PATH_MSG;
 import static com.openexchange.drive.DriveExceptionMessages.INVALID_PATTERN_MSG;
+import static com.openexchange.drive.DriveExceptionMessages.LEVEL_CONFLICTING_FILENAME_MSG;
+import static com.openexchange.drive.DriveExceptionMessages.LEVEL_CONFLICTING_PATH_MSG;
 import static com.openexchange.drive.DriveExceptionMessages.LONG_POLLING_NOT_AVAILABLE_MSG;
 import static com.openexchange.drive.DriveExceptionMessages.NO_CREATE_DIRECTORY_PERMISSION_MSG;
 import static com.openexchange.drive.DriveExceptionMessages.NO_CREATE_FILE_PERMISSION_MSG;
@@ -177,6 +179,13 @@ public enum DriveExceptionCodes implements DisplayableOXExceptionCode {
 
     /** The pattern \"%1$s\" is invalid: \"%2$s\" */
     INVALID_PATTERN("The pattern \"%1$s\" is invalid: \"%2$s\"", INVALID_PATTERN_MSG, Category.CATEGORY_USER_INPUT, 30),
+
+    /** The file name \"%1$s\" is conflicting with an equally named directory at \"%2$s\". */
+    LEVEL_CONFLICTING_FILENAME(LEVEL_CONFLICTING_FILENAME_MSG, LEVEL_CONFLICTING_FILENAME_MSG, Category.CATEGORY_CONFLICT, 31),
+
+    /** "The path \"%1$s\" is conflicting with an equally named file at \"%2$s\"." */
+    LEVEL_CONFLICTING_PATH(LEVEL_CONFLICTING_PATH_MSG, LEVEL_CONFLICTING_PATH_MSG, Category.CATEGORY_CONFLICT, 32),
+
     ;
 
     private static final String PREFIX = "DRV";
