@@ -1,3 +1,8 @@
+* 2014-09-24 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 34561: Introduced various checks to prevent synchronization of equally named files and folders at the same level of the 
+                      folder hierarchy
+
 * 2014-09-24 - martin.schneider@open-xchange.com
 
  - Fix for bug 34579: Do not validate account if primary mail account is provided
